--- a/02_basics/01_Arthematic_operations/a_arthematic_operations.ipynb
+++ b/02_basics/01_Arthematic_operations/a_arthematic_operations.ipynb
@@ -1,6 +1,193 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.6457513110645907\n"
+     ]
+    }
+   ],
+   "source": [
+    "# PEMDAS\n",
+    "print(math.sqrt(-(3 ** 2) + (4**2)))  # 2.6457513110645907"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(math.sqrt(pow(3, 2)+pow(4,2)))  # 5.0\n",
+    "print(math.sqrt((-3) ** 2 + 4 ** 2))  # 5.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading a module(library) to use\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abs(-3+4j)   =  5.0\n",
+      "abs(-3+4.0j) =  5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"abs(-3+4j)   = \", abs(-3+4j))   # 5.0\n",
+    "print(\"abs(-3+4.0j) = \", abs(-3+4.0j)) # 5.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abs(3)          =  3\n",
+      "abs(-3)         =  3\n",
+      "abs(-3234.34234)=  3234.34234\n",
+      "abs(0.00000001) =  1e-08\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"abs(3)          = \", abs(3))\n",
+    "print(\"abs(-3)         = \", abs(-3))\n",
+    "\n",
+    "print(\"abs(-3234.34234)= \", abs(-3234.34234))\n",
+    "print(\"abs(0.00000001) = \", abs(0.00000001))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ABS\n",
+    "\n",
+    "        Built-in function, to return the absolute value.\n",
+    "\n",
+    "        if a is positive real integer,\n",
+    "            abs(a)  = a\n",
+    "            abs(-a) = a\n",
+    "            abs(a+bj)  is equal to math.sqrt(pow(a,2)+ pow(b,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'> 3.1415923223213453\n",
+      "<class 'float'> 6.022140857e+23\n",
+      "123453213213\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Smaller numbers\n",
+    "pi_value = 3.1415_9232_2321_3453\n",
+    "print(type(pi_value), pi_value)\n",
+    "\n",
+    "avogadro_value = 6.022_140_857e23\n",
+    "print(type(avogadro_value),avogadro_value)\n",
+    "\n",
+    "print(1_2_3_4_53_213_213) #1_2_3_4_53_213_213\n",
+    "# print(1_2_3_4_53_213_213)  # NO MORE THAN ONE CONTINOUS UNDERSCORES SyntaxError: invalid dec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'> 299792458\n",
+      "<class 'tuple'> (299, 792, 458)\n",
+      "<class 'int'> 299792458\n",
+      "<class 'str'> 299_792_458\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Larger Numbers\n",
+    "speed_of_light = 299792458\n",
+    "print(type(speed_of_light), speed_of_light)\n",
+    "\n",
+    "speed_of_light = 299, 792, 458\n",
+    "print(type(speed_of_light), speed_of_light)\n",
+    "\n",
+    "speed_of_light = 299_792_458\n",
+    "print(type(speed_of_light), speed_of_light)\n",
+    "\n",
+    "speed_of_light = \"299_792_458\"\n",
+    "print(type(speed_of_light), speed_of_light)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num = 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 100\n",
+    "print(\"num =\", num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Representing big(large and small) numbers"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
